--- a/activity03/card.html
+++ b/activity03/card.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Three Credit Card Layouts</title>
-<ink rel="Stylesheet" href="styles.css">
+<ink rel="Stylesheet" href=".\styles.css">
 </head>
 <body>
    <div class="new-line">
